--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
               <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/president.jpg" alt="">
-              <h4>Sadie Hoberman</h4>
+              <h4>Erin Welker</h4>
               <span>President</span>
               <p>
                 Sadie is a junior studying Business Data Analytics, Economics, and Sociology at ASU. She is the PR Director for the PCCSC and is on the Women of AYC Committee.
