--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="icon-box">
               <i class="bi bi-card-checklist" style="font-size: 40px;"></i>
               <h4><strong>Requirements</strong></h4>
-              <p>We charge dues of $100 a semester to help subsidize the cost of storing and maintaining our boats. 
+              <p>We charge dues of $125 a semester to help subsidize the cost of storing and maintaining our boats. 
                 Before joining, all members must pass a swim test and capsize test.
                 We also ask that our members are compliant with the SDFC requirements of DoSportsEasy, and attend volunteering and social events with the team to ensure that we keep our funding.
               </p>
@@ -146,7 +146,7 @@
               <i class="bi bi-calendar-check" style="font-size: 40px;"></i>
               <h4><strong>Practice</strong></h4>
               <p>We practice 4 times a week.
-               3 of these are on the water practices, and are held Thursdays at 4:30pm, and Fridays and Saturdays at 3pm.
+               3 of these are on the water practices, and are held Thursdays at 5:00pm, and Fridays and Saturdays at 3pm.
                Our fourth practice is an on-land chalktalk, which is held on Monday evenings on or near campus.
               </p>
             </div>
@@ -179,70 +179,69 @@
         <div class="row">
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
-              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/president.jpg" alt="">
+              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/erinHeadshot.jpg" alt="">
               <h4>Erin Welker</h4>
               <span>President</span>
               <p>
-                Sadie is a junior studying Business Data Analytics, Economics, and Sociology at ASU. She is the PR Director for the PCCSC and is on the Women of AYC Committee.
-                 This is her second year as president of Sailing at ASU, and she is excited to continue increasing ASU's involvement in the sailing community
+                Erin is a sophomore studying sustainability. This is her second year on the team and first year as president. She is excited to continue to build the team and spend more time on the water!
               </p>
             </div>
           </div>
 
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
-              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/vicePres.jpg" alt="">
-              <h4>Sean Keannely</h4>
+              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/mitchHeadshot.jpg" alt="">
+              <h4>Mitch Powers</h4>
               <span>Vice President</span>
               <p>
-                Sean is a junior studying Business Law and Real Estate. This is his first year as Vice President of Sailing at ASU, after serving as volunteer coordinator for the previous year. 
-                 He is excited to continue increasing the club's competitiveness and increasing involvement with AYC
+                Mitch is a senior studying mechanical engineering with a concentration in energy and the environment. He is a dedicated sailor and a super amazing awesome fellow. 
               </p>
             </div>
           </div>
 
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
-              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/secretary.jpg" alt="">
-              <h4>Gillian Cate</h4>
+              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/sadieHeadshot.jpg" alt="">
+              <h4>Sadie Hoberman</h4>
               <span>Secretary</span>
               <p>
-                Gillian is a junior at ASU studying Criminology and Criminal Justice as well as Film and Media Production. Her first experience with sailing was when she joined the club last year and immediately fell in love with it.
-                 She hopes that in the coming year she can improve as a sailor as well as help the club be the best it can be
+                Sadie is a senior studying Business Data Analytics, Economics, and Sociology at ASU. She is the PR Director for the PCCSC and is on the Women of AYC Committee.
+                 This is her second year as president of Sailing at ASU, and she is excited to continue increasing ASU's involvement in the sailing community!
               </p>
             </div>
           </div>
 
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
-              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/treasurer.jpeg" alt="">
-              <h4>Hayden Shaw</h4>
+              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/eliasHeadshot.jpg" alt="">
+              <h4>Elias Ricken</h4>
               <span>Treasurer</span>
               <p>
-                Hayden is a junior studying supply chain management. This is his first year serving as treasurer for the team. Hayden learned how to sail his freshman year and is now a skipper competing in multiple regattas
+                Elias is a sophomore studying Computer Science. He had no prior sailing experience before joining the team but quickly fell in love with the sport. This year, he hopes to carry the boats (and potentially some logs too).
               </p>
             </div>
           </div>
 
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
-              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/volunteer.jpeg" alt="">
-              <h4>Matt Grimsley</h4>
+              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/gillianHeadshot.jpg" alt="">
+              <h4>Gillian Cate</h4>
               <span>Volunteer Coordinator</span>
               <p>
-                Matt is a sophomore studying professional flight. Outside of sailing he enjoys rock climbing, surfing, and kiteboarding. This is his first year as volunteer coordinator on the team and second year as a member of the team 
+                Gillian is a senior at ASU studying Criminology and Criminal Justice as well as Film and Media Production. Her first experience with sailing was when she joined the club two years ago and immediately fell in love with it.
+                 She hopes that in the coming year she can improve as a sailor as well as help the club be the best it can be! 
               </p>
             </div>
           </div>
 
           <div class="col-12 col-lg-4 d-flex align-items-center align-items-stretch">
             <div class="member">
-              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/socialChair.jpeg" alt="">
-              <h4>Tim Crawford</h4>
-              <span>Social Chair</span>
+              <img class="rounded-circle" style="height:200px; width:200px; object-fit: cover;" src="assets/img/team/camdenHeadshot.jpg" alt="">
+              <h4>Camden Wacha</h4>
+              <span>PR Director</span>
               <p>
-                Tim is an Honors Student in his senior year at ASU. He's only been sailing for a semester but has enjoyed learning how to sail and racing competitively with the team.
-                 An aspiring lawyer, Crawford looks forward to going to law school in the coming years and takinig his newly found love for sailing with him in the future
+                Camden is a sophmore studying Media Arts and Sciences with a concentration in film. He started sailing at a young age but only started competing at ASU, after learning regatta rules from the inviting sailing team members.
+                Outside of sailing, Camden enjoys photography and distance running.
               </p>
             </div>
           </div>
