Switched the old team photo for a new one

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="my-4 row">
           <div class="col-lg-6">
-            <img src="assets/img/team.jpg" class="img-fluid" alt="">
+            <img src="assets/img/team/teamPic.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 my-auto">
             <h3>About Us</h3>
