Updated Board member bios

--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
               <h4>Sadie Hoberman</h4>
               <span>Secretary</span>
               <p>
-                Sadie is a senior studying Business Data Analytics, Economics, and Sociology at ASU. She is the PR Director for the PCCSC and is on the Women of AYC Committee.
-                 This is her second year as president of Sailing at ASU, and she is excited to continue increasing ASU's involvement in the sailing community!
+                Sadie is a senior studying Business Data Analytics and Economics, with a minor in Philosophy. She is the president of the PCCSC and is on the Women of AYC Committee.
+                 This is her fourth year on the team, and she is excited to continue sailing for ASU!
               </p>
             </div>
           </div>
@@ -228,8 +228,8 @@
               <h4>Gillian Cate</h4>
               <span>Volunteer Coordinator</span>
               <p>
-                Gillian is a senior at ASU studying Criminology and Criminal Justice as well as Film and Media Production. Her first experience with sailing was when she joined the club two years ago and immediately fell in love with it.
-                 She hopes that in the coming year she can improve as a sailor as well as help the club be the best it can be! 
+                Gillian is a senior at ASU studying Criminology and Criminal Justice as well as Film and Media Production. She is also on the Arizona Yacht Club's safety committee. Her first experience with sailing was when she joined the club her sophomore year and immediately fell in love with it.
+                This will be her third year on the team and she hopes that she can continue improving as a sailor.
               </p>
             </div>
           </div>
